Dom on Templates

--- a/Java Scritp/DOM/Template/Template4.html
+++ b/Java Scritp/DOM/Template/Template4.html
@@ -8,25 +8,26 @@
     <title>Template 84</title>
     <link rel="stylesheet" href="./Template4.css" title="text/css">
 </head>
+
 <body>
     <div class="wrapper row1">
         <header id="header" class="clear0">
             <div id="hgroup">
-                <h1>
+                <!-- <h1>
                     <a href="#">Basic 84</a>
                 </h1>
-                <h2>Free HTML5 Website Template</h2>
+                <h2>Free HTML5 Website Template</h2> -->
             </div>
             <form action="#" method="post">
-                <fieldset>
-                    <input type="text" value="Search Our Website"
+                <fieldset id="field">
+                    <!-- <input type="text" value="Search Our Website"
                         onfocus="this.value=(this.value='search our website...') ? '' : this.value ;">
-                    <input id="sf_submit" type="submit" value="submit">
+                    <input id="sf_submit" type="submit" value="submit"> -->
                 </fieldset>
             </form>
             <nav>
-                <ul>
-                    <li>
+                <ul id="ul_dom">
+                    <!-- <li>
                         <a href="#">Text Link</a>
                     </li>
                     <li>
@@ -40,7 +41,7 @@
                     </li>
                     <li class="last">
                         <a href="#">Text Link</a>
-                    </li>
+                    </li> -->
                 </ul>
             </nav>
         </header>
@@ -48,21 +49,21 @@
     <div class="wrapper row2">
         <div id="container" class="clear">
             <section id="slider">
-                <a href="#">
+                <!-- <a href="#">
                     <img src="../Template/template_images/84/960x360.gif">
-                </a>
+                </a> -->
             </section>
             <section id="shout">
-                <p>
+                <!-- <p>
                     Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed. Facilispede
                     estibulum nulla orna nisl velit elit ac aliquat non tincidunt namjusto cras urna.
-                </p>
+                </p> -->
             </section>
             <div id="homepage">
-                <h1>Services We Offer</h1>
+                <!-- <h1>Services We Offer</h1> -->
                 <section id="services" class="clear">
-                    <article>
-                        <figure>
+                    <article class="art">
+                        <!-- <figure>
                             <img src="../Template/template_images/84/32x32.gif" alt="" width="32" height="32">
                         </figure>
                         <strong>Lorum ipsum dolor</strong>
@@ -74,10 +75,10 @@
                         </p>
                         <p class="more">
                             <a href="#">Read More>></a>
-                        </p>
+                        </p> -->
                     </article>
-                    <article>
-                        <figure>
+                    <article class="art">
+                        <!-- <figure>
                             <img src="../Template/template_images/84/32x32.gif" alt="" width="32" height="32">
                         </figure>
                         <strong>Lorum ipsum dolor</strong>
@@ -89,10 +90,10 @@
                         </p>
                         <p class="more">
                             <a href="#">Read More>></a>
-                        </p>
+                        </p> -->
                     </article>
-                    <article class="last">
-                        <figure>
+                    <article class="last art">
+                        <!-- <figure>
                             <img src="../Template/template_images/84/32x32.gif" alt="" width="32" height="32">
                         </figure>
                         <strong>Lorum ipsum dolor</strong>
@@ -104,58 +105,60 @@
                         </p>
                         <p class="more">
                             <a href="#">Read More>></a>
-                        </p>
+                        </p> -->
                     </article>
                 </section>
                 <h1>Latest From The Gallery</h1>
                 <section id="latest" class="last clear">
                     <article class="one_quarter">
-                        <figure>
+                        <!-- <figure>
                             <img src="../Template/template_images/84/215x315.gif" alt="" width="215" height="315">
                             <figcaption>
                                 image Caption Here
                             </figcaption>
-                        </figure>
+                        </figure> -->
                     </article>
                     <article class="one_quarter">
-                        <figure>
+                        <!-- <figure>
                             <img src="../Template/template_images/84/215x315.gif" alt="" width="215" height="315">
                             <figcaption>
                                 image Caption Here
                             </figcaption>
-                        </figure>
+                        </figure> -->
                     </article>
                     <article class="one_quarter">
-                        <figure>
+                        <!-- <figure>
                             <img src="../Template/template_images/84/215x315.gif" alt="" width="215" height="315">
                             <figcaption>
                                 image Caption Here
                             </figcaption>
-                        </figure>
+                        </figure> -->
                     </article>
                     <article class="one_quarter lastbox">
-                        <figure>
+                        <!-- <figure>
                             <img src="../Template/template_images/84/215x315.gif" alt="" width="215" height="315">
                             <figcaption>
                                 image Caption Here
                             </figcaption>
-                        </figure>
+                        </figure> -->
                     </article>
-                </section>  
+                </section>
             </div>
         </div>
     </div>
     <div class="wrapper row3">
         <footer id="footer" class="clear">
-            <p class="f1_left">
+            <!-- <p class="f1_left">
                 Copyright © 2018 - All Rights Reserved -
                 <a href="#">Domain Name</a>
             </p>
             <p class="f1_right">
                 Template by
                 <a href="https://os-templates.com/" title="Free Website Templates">OS Templates</a>
-            </p>
+            </p> -->
         </footer>
     </div>
+    <script src="./Template4.js"></script>
 </body>
+
 </html>
