--- a/Java Scritp/DOM/Template/Template6.html
+++ b/Java Scritp/DOM/Template/Template6.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,18 +8,19 @@
     <title>Template_86</title>
     <link rel="stylesheet" href="./Template6.css" type="text/css">
 </head>
+
 <body>
     <div class="wrapper row1">
         <header id="header" class="clear">
             <div id="hgroup">
-                <h1>
+                <!-- <h1>
                     <a href="#">Basic 86</a>
                 </h1>
-                <h2>Free HTML5 Website Template</h2>
+                <h2>Free HTML5 Website Template</h2> -->
             </div>
             <nav>
-                <ul>
-                    <li>
+                <ul id="ul_dom">
+                    <!-- <li>
                         <a href="#">Text Link</a>
                     </li>
                     <li>
@@ -32,7 +34,7 @@
                     </li>
                     <li class="last">
                         <a href="#">Text Link</a>
-                    </li>
+                    </li> -->
                 </ul>
             </nav>
         </header>
@@ -40,55 +42,69 @@
     <div class="wrapper row2">
         <div id="container" class="clear">
             <section id="slider" class="clear">
-                <figure>
+                <!-- <figure>
                     <img src="../Template/template_images/86/630x300.gif" alt="">
                     <figcaption>
                         <h2>Eu justo augue estas</h2>
                         <p>
-                            Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna. Urnaultrices quis curabitur phasellentesque congue magnis vestibulum quismodo nulla et feugiat adipiscinia pellentum leo.
+                            Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.
+                            Urnaultrices quis curabitur phasellentesque congue magnis vestibulum quismodo nulla et
+                            feugiat adipiscinia pellentum leo.
                         </p>
                         <footer class="more">
                             <a href="#">Read More>></a>
                         </footer>
                     </figcaption>
-                </figure>
+                </figure> -->
             </section>
             <div id="homepage">
                 <section id="services" class="clear">
                     <article class="one_third">
-                        <h2>Lorum ipsum dolor</h2>
+                        <!-- <h2>Lorum ipsum dolor</h2>
                         <img src="../Template/template_images/86/80x80.gif" alt="">
                         <p>
-                            Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed. Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras urna urnaretra lor urna neque sed quis orci nulla. Laoremut vitae doloreet condimentumst phasellentes dolor ut a ipsum id consectetus. Inpede cumst vitae ris tellentesque fring intesquet.
+                            Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed.
+                            Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras
+                            urna urnaretra lor urna neque sed quis orci nulla. Laoremut vitae doloreet condimentumst
+                            phasellentes dolor ut a ipsum id consectetus. Inpede cumst vitae ris tellentesque fring
+                            intesquet.
                         </p>
                         <footer class="more">
                             <a href="#">Read More>></a>
-                        </footer>
+                        </footer> -->
                     </article>
                     <article class="one_third">
-                        <h2>Lorum ipsum dolor</h2>
+                        <!-- <h2>Lorum ipsum dolor</h2>
                         <img src="../Template/template_images/86/80x80.gif" alt="">
                         <p>
-                            Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed. Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras urna urnaretra lor urna neque sed quis orci nulla. Laoremut vitae doloreet condimentumst phasellentes dolor ut a ipsum id consectetus. Inpede cumst vitae ris tellentesque fring intesquet.
+                            Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed.
+                            Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras
+                            urna urnaretra lor urna neque sed quis orci nulla. Laoremut vitae doloreet condimentumst
+                            phasellentes dolor ut a ipsum id consectetus. Inpede cumst vitae ris tellentesque fring
+                            intesquet.
                         </p>
                         <footer class="more">
                             <a href="#">Read More>></a>
-                        </footer>
+                        </footer> -->
                     </article>
                     <article class="one_third lastbox">
-                        <h2>Lorum ipsum dolor</h2>
+                        <!-- <h2>Lorum ipsum dolor</h2>
                         <img src="../Template/template_images/86/80x80.gif" alt="">
                         <p>
-                            Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed. Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras urna urnaretra lor urna neque sed quis orci nulla. Laoremut vitae doloreet condimentumst phasellentes dolor ut a ipsum id consectetus. Inpede cumst vitae ris tellentesque fring intesquet.
+                            Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed.
+                            Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras
+                            urna urnaretra lor urna neque sed quis orci nulla. Laoremut vitae doloreet condimentumst
+                            phasellentes dolor ut a ipsum id consectetus. Inpede cumst vitae ris tellentesque fring
+                            intesquet.
                         </p>
                         <footer class="more">
                             <a href="#">Read More>></a>
-                        </footer>
+                        </footer> -->
                     </article>
                 </section>
                 <section id="latest" class="last clear">
                     <article class="one_quarter">
-                        <figure>
+                        <!-- <figure>
                             <img src="../Template/template_images/86/215x100.gif" alt="" width="215" height="100">
                             <figcaption>
                                 <h2>Indonectetus facilis</h2>
@@ -99,10 +115,10 @@
                                     <a href="#">Read More>></a>
                                 </footer>
                             </figcaption>
-                        </figure>
+                        </figure> -->
                     </article>
                     <article class="one_quarter">
-                        <figure>
+                        <!-- <figure>
                             <img src="../Template/template_images/86/215x100.gif" alt="" width="215" height="100">
                             <figcaption>
                                 <h2>Indonectetus facilis</h2>
@@ -113,10 +129,10 @@
                                     <a href="#">Read More>></a>
                                 </footer>
                             </figcaption>
-                        </figure>
+                        </figure> -->
                     </article>
                     <article class="one_quarter">
-                        <figure>
+                        <!-- <figure>
                             <img src="../Template/template_images/86/215x100.gif" alt="" width="215" height="100">
                             <figcaption>
                                 <h2>Indonectetus facilis</h2>
@@ -127,10 +143,10 @@
                                     <a href="#">Read More>></a>
                                 </footer>
                             </figcaption>
-                        </figure>
+                        </figure> -->
                     </article>
                     <article class="one_quarter lastbox">
-                        <figure>
+                        <!-- <figure>
                             <img src="../Template/template_images/86/215x100.gif" alt="" width="215" height="100">
                             <figcaption>
                                 <h2>Indonectetus facilis</h2>
@@ -141,7 +157,7 @@
                                     <a href="#">Read More>></a>
                                 </footer>
                             </figcaption>
-                        </figure>
+                        </figure> -->
                     </article>
                 </section>
             </div>
@@ -150,15 +166,17 @@
     <div class="spacer"></div>
     <div class="wrapper row3">
         <footer id="footer" class="clear">
-            <p class="f1_left">
-                Copyright © 2018 - All Rights Reserved - 
+            <!-- <p class="f1_left">
+                Copyright © 2018 - All Rights Reserved -
                 <a href="#">Domain Name</a>
             </p>
             <p class="f1_right">
                 Template by
                 <a href="https://www.os-template.com/" title="Free Website Templates" target="_blank">OS Template</a>
-            </p>
+            </p> -->
         </footer>
     </div>
+    <script src="./Template6.js"></script>
 </body>
+
 </html>
