--- a/Java Scritp/DOM/Template/Template3.html
+++ b/Java Scritp/DOM/Template/Template3.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,24 +8,26 @@
     <title>Template_83</title>
     <link rel="stylesheet" href="./Template3.css" type="text/css">
 </head>
+
 <body>
     <div class="wrapper row1">
         <header id="header" class="clear">
             <div id="hgroup">
-                <h1>
+                <!-- <h1>
                     <a href="#">Basic 83</a>
                 </h1>
-                <h2>Free HTML5 Website Template</h2>
+                <h2>Free HTML5 Website Template</h2> -->
             </div>
             <form action="#" method="post">
-               <fieldset>
-                   <input type="text" value="Search Our Website" onfocus="this.value=(this.value='search our website...') ? '' : this.value ;">
-                    <input id="sf_submit" type="submit" value="submit">
-                </fieldset> 
+                <fieldset id="field">
+                    <!-- <input type="text" value="Search Our Website"
+                        onfocus="this.value=(this.value='search our website...') ? '' : this.value ;">
+                    <input id="sf_submit" type="submit" value="submit"> -->
+                </fieldset>
             </form>
             <nav>
-                <ul>
-                    <li>
+                <ul id="ul_dom">
+                    <!-- <li>
                         <a href="#">Text Link</a>
                     </li>
                     <li>
@@ -38,7 +41,7 @@
                     </li>
                     <li class="last">
                         <a href="#">Text Link</a>
-                    </li>
+                    </li> -->
                 </ul>
             </nav>
         </header>
@@ -46,84 +49,92 @@
     <div class="wrapper row2">
         <div id="container" class="clear">
             <section id="slider">
-                <a href="#">
+                <!-- <a href="#">
                     <img src="../Template/template_images/83/960x280.gif" alt="">
-                </a>
+                </a> -->
             </section>
             <div id="homepage">
                 <section id="services" class="clear">
                     <article class="one_quarter">
-                        <figure>
+                        <!-- <figure>
                             <img src="../Template/template_images/83/32x32.gif" alt="" width="32" height="32">
                         </figure>
                         <strong>Lorum ipsum dolor</strong>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla
+                            massa ut nisi ullamcorper.
                         </p>
                         <p class="more">
                             <a href="#">Read More>></a>
-                        </p>
+                        </p> -->
                     </article>
                     <article class="one_quarter">
-                        <figure>
+                        <!-- <figure>
                             <img src="../Template/template_images/83/32x32.gif" alt="" width="32" height="32">
                         </figure>
                         <strong>Lorum ipsum dolor</strong>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla
+                            massa ut nisi ullamcorper.
                         </p>
                         <p class="more">
                             <a href="#">Read More>></a>
-                        </p>
+                        </p> -->
                     </article>
                     <article class="one_quarter">
-                        <figure>
+                        <!-- <figure>
                             <img src="../Template/template_images/83/32x32.gif" alt="" width="32" height="32">
                         </figure>
                         <strong>Lorum ipsum dolor</strong>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla
+                            massa ut nisi ullamcorper.
                         </p>
                         <p class="more">
                             <a href="#">Read More>></a>
-                        </p>
+                        </p> -->
                     </article>
                     <article class="one_quarter lastbox">
-                        <figure>
+                        <!-- <figure>
                             <img src="../Template/template_images/83/32x32.gif" alt="" width="32" height="32">
                         </figure>
                         <strong>Lorum ipsum dolor</strong>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla
+                            massa ut nisi ullamcorper.
                         </p>
                         <p class="more">
                             <a href="#">Read More>></a>
-                        </p>
+                        </p> -->
                     </article>
                 </section>
                 <section class="last clear">
-                    <article class="three_quarter">
-                        <h2>Lorum ipsum dolor</h2>
-                        <p>This is a W3C compliant free website template from 
+                    <article class="three_quarter" id="three_qu">
+                        <!-- <h2>Lorum ipsum dolor</h2>
+                        <p>This is a W3C compliant free website template from
                             <a href="https://www.os-templates.com/" title="Free Website Templates">Os Templates</a>
-                            . For full terms of use of this template please read our <a href="https://www.os-templates.com/templates-terms">website template licence</a>.
+                            . For full terms of use of this template please read our <a
+                                href="https://www.os-templates.com/templates-terms">website template licence</a>.
                         </p>
                         <p>
-                            You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more HTML5 templates visit
+                            You can use and modify the template for both personal and commercial use. You must keep all
+                            copyright information and credit links in the template and associated files. For more HTML5
+                            templates visit
                             <a href="https://www.os-templates.com/">free website templates</a>
                         </p>
                         <footer class="more">
                             <a href="#">Read More>></a>
-                        </footer>
+                        </footer> -->
                     </article>
-                    <article class="one_quarter lastbox">
-                        <h2>Lorum ipsum dolor</h2>
+                    <article id="bo" class="lastbox">
+                        <!-- <h2>Lorum ipsum dolor</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper pellentesque. Quisque non luctus sem.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla
+                            massa ut nisi ullamcorper pellentesque. Quisque non luctus sem.
                         </p>
                         <p class="more">
                             <a href="#">Read More>></a>
-                        </p>
+                        </p> -->
                     </article>
                 </section>
             </div>
@@ -131,15 +142,17 @@
     </div>
     <div class="wrapper row3">
         <footer id="footer" class="clear">
-            <p class="f1_left">
+            <!-- <p class="f1_left">
                 Copyright © 2018 - All Rights Reserved -
                 <a href="#">Domain Name</a>
             </p>
             <p class="f1_right">
                 Template by
                 <a href="https://www.os-templates.com/" target="_blank" title="Free Website Templates">OS Templates</a>
-            </p>
+            </p> -->
         </footer>
     </div>
+    <script src="./Template3.js"></script>
 </body>
+
 </html>
