--- a/Java Scritp/DOM/Template/template11.html
+++ b/Java Scritp/DOM/Template/template11.html
@@ -13,28 +13,28 @@
     <div class="wrapper row1">
         <header id="header" class="clear">
             <div id="hgroup">
-                <h1>
+                <!-- <h1>
                     <a href="#">Basic 88</a>
                 </h1>
-                <h2>Free HTML5 Website Template</h2>
+                <h2>Free HTML5 Website Template</h2> -->
             </div>
             <nav>
-                <ul>
-                    <li>
+                <ul id="ul_dom">
+                    <!-- <li>
                         <a href="#">Text Link</a>
                     </li>
                     <li>
                         <a href="#">Text Link</a>
                     </li>
                     <li>
-                        <a href="#">Tex  Link</a>
+                        <a href="#">Tex Link</a>
                     </li>
                     <li>
-                        <a href="#">Text Link</a> 
+                        <a href="#">Text Link</a>
                     </li>
                     <li class="last">
                         <a href="#">Text Link</a>
-                    </li>
+                    </li> -->
                 </ul>
             </nav>
         </header>
@@ -42,14 +42,14 @@
     <div class="wrapper row2">
         <div id="container" class="clear">
             <section id="slider">
-                <a href="#">
+                <!-- <a href="#">
                     <img src="../Template/template_images/960x360.gif" alt="">
-                </a>
+                </a> -->
             </section>
             <div id="homepage">
                 <section id="services" class="clear">
                     <article class="one_third">
-                        <figure>
+                        <!-- <figure>
                             <img src="../Template/template_images/290x180.gif" alt="" width="290" height="180">
                             <figcaption>
                                 <h2>Indonectetus facilis</h2>
@@ -58,55 +58,62 @@
                                     <a href="#">Read More>></a>
                                 </footer>
                             </figcaption>
-                        </figure>
+                        </figure> -->
                     </article>
                     <article class="one_third">
                         <figure>
-                            <img src="../Template/template_images/290x180.gif" alt="" width="290" height="180">
+                            <!-- <img src="../Template/template_images/290x180.gif" alt="" width="290" height="180">
                             <figcaption>
                                 <h2>Indonectetus facilis</h2>
                                 <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.</p>
                                 <footer class="more">
                                     <a href="#">Read More>></a>
                                 </footer>
-                            </figcaption>
+                            </figcaption> -->
                         </figure>
                     </article>
                     <article class="one_third lastbox">
                         <figure>
-                            <img src="../Template/template_images/290x180.gif" alt="" width="290" height="180">
+                            <!-- <img src="../Template/template_images/290x180.gif" alt="" width="290" height="180">
                             <figcaption>
                                 <h2>Indonectetus facilis</h2>
                                 <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.</p>
                                 <footer class="more">
                                     <a href="#">Read More>></a>
                                 </footer>
-                            </figcaption>
+                            </figcaption> -->
                         </figure>
                     </article>
                 </section>
                 <section id="intro" class="last clear">
-                    <article>
+                    <!-- <article>
                         <figure>
                             <img src="../Template/template_images/450x250.gif" alt="" width="450" height="250">
                             <figcaption>
                                 <h2>Indonectetus facilis leo nibh</h2>
-                                <p>This is a W3C compliant free website template from<a href="https://www.os-templates.com/" title="Free Website Template">OS Template</a>. For full terms of use of this template please read our<a href="https;//www.os-templates.com/template-terms">website template licence</a>.</p>
-                                <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more HTML5 templates visit<a href="https://www.os-templates.com/ ">free website templates</a>.</p>
+                                <p>This is a W3C compliant free website template from<a
+                                        href="https://www.os-templates.com/" title="Free Website Template">OS
+                                        Template</a>. For full terms of use of this template please read our<a
+                                        href="https;//www.os-templates.com/template-terms">website template licence</a>.
+                                </p>
+                                <p>You can use and modify the template for both personal and commercial use. You must
+                                    keep all copyright information and credit links in the template and associated
+                                    files. For more HTML5 templates visit<a href="https://www.os-templates.com/ ">free
+                                        website templates</a>.</p>
                                 <footer class="more">
                                     <a href="#">Read More>></a>
                                 </footer>
                             </figcaption>
                         </figure>
-                    </article>
+                    </article> -->
                 </section>
             </div>
         </div>
     </div>
     <div class="wrapper row3">
         <div id="footer" class="clear">
-            <section class="one_quarter">
-                <h2 class="title">Link Block</h2>
+            <section class="one_quarter two">
+                <!-- <h2 class="title">Link Block</h2>
                 <nav>
                     <ul>
                         <li>
@@ -125,10 +132,10 @@
                             <a href="#">Sed a nulla urna</a>
                         </li>
                     </ul>
-                </nav>
+                </nav> -->
             </section>
-            <section class="one_quarter">
-                <h2 class="title">Link Block</h2>
+            <section class="one_quarter two">
+                <!-- <h2 class="title">Link Block</h2>
                 <nav>
                     <ul>
                         <li>
@@ -147,10 +154,10 @@
                             <a href="#">Sed a nulla urna</a>
                         </li>
                     </ul>
-                </nav>
+                </nav> -->
             </section>
-            <section class="one_quarter">
-                <h2 class="title">Link Block</h2>
+            <section class="one_quarter two">
+                <!-- <h2 class="title">Link Block</h2>
                 <nav>
                     <ul>
                         <li>
@@ -169,10 +176,10 @@
                             <a href="#">Sed a nulla urna</a>
                         </li>
                     </ul>
-                </nav>
+                </nav> -->
             </section>
-            <section class="one_quarter lastbox">
-                <h2 class="title">Link Block</h2>
+            <section class="one_quarter lastbox two">
+                <!-- <h2 class="title">Link Block</h2>
                 <nav>
                     <ul>
                         <li>
@@ -180,7 +187,7 @@
                         </li>
                         <li>
                             <a href="#">Amet consectetur</a>
-                         </li>
+                        </li>
                         <li>
                             <a href="#">Praesent vel sem id</a>
                         </li>
@@ -191,22 +198,23 @@
                             <a href="#">Sed a nulla urna</a>
                         </li>
                     </ul>
-                </nav>
+                </nav> -->
             </section>
         </div>
     </div>
     <div class="wrapper row4">
         <footer id="copyright" class="clear">
-            <p class="f1_left">
+            <!-- <p class="f1_left">
                 Copyright © 2018 - All Rights Reserved -
                 <a href="#">Domain Name</a>
             </p>
             <p class="f1_right">
                 Template by
                 <a href="https://www.os-templates.com/" target="_blank" title="Free Website Templates"> Os Templates</a>
-            </p>
+            </p> -->
         </footer>
     </div>
+    <script src="./Template11.js"></script>
 </body>
 
 </html>
