--- a/Java Scritp/DOM/Template/template5.html
+++ b/Java Scritp/DOM/Template/template5.html
@@ -13,14 +13,14 @@
     <div class="wrapper row1">
         <header id="header" class="clear">
             <div id="hgroup">
-                <h1>
+                <!-- <h1>
                     <a href="#">Basic 85</a>
                 </h1>
-                <h2>Free HTML5 Website Template</h2>
+                <h2>Free HTML5 Website Template</h2> -->
             </div>
             <nav>
-                <ul>
-                    <li>
+                <ul id="ul_dom">
+                    <!-- <li>
                         <a href="#">Text Link</a>
                     </li>
                     <li>
@@ -34,7 +34,7 @@
                     </li>
                     <li class="last">
                         <a href="#">Text Link</a>
-                    </li>
+                    </li> -->
                 </ul>
             </nav>
         </header>
@@ -42,137 +42,145 @@
     <div class="wrapper row2">
         <div id="container" class="clear">
             <section id="shout">
-                <p>
+                <!-- <p>
                     Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed. Facilispede
                     estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras urna urnaretra lor urna
                     neque sed quis orci nulla laoremut vitae doloreet condimentumst.
-                </p>
+                </p> -->
             </section>
             <div id="homepage">
                 <section id="latest">
                     <article>
                         <figure>
-                            <ul>
-                                <li class="one_quarter">
-                                    <img src="../Template/template_images/85/215x150.gif" alt="" width="215"
-                                        height="150">
+                            <ul id="one">
+                                <li class="one_quarterr">
+                                    <!-- <img src="../Template/template_images/85/215x150.gif" alt="" width="215"
+                                        height="150"> -->
                                 </li>
-                                <li class="one_quarter">
-                                    <img src="../Template/template_images/85/215x150.gif" alt="" width="215"
-                                        height="150">
+                                <li class="one_quarterr">
+                                    <!-- <img src="../Template/template_images/85/215x150.gif" alt="" width="215"
+                                        height="150"> -->
                                 </li>
-                                <li class="one_quarter">
-                                    <img src="../Template/template_images/85/215x150.gif" alt="" width="215"
-                                        height="150">
+                                <li class="one_quarterr">
+                                    <!-- <img src="../Template/template_images/85/215x150.gif" alt="" width="215"
+                                        height="150"> -->
                                 </li>
-                                <li class="one_quarter lastbox">
-                                    <img src="../Template/template_images/85/215x150.gif" alt="" width="215"
-                                        height="150">
+                                <li class="one_quarterr lastbox">
+                                    <!-- <img src="../Template/template_images/85/215x150.gif" alt="" width="215"
+                                        height="150"> -->
                                 </li>
                             </ul>
-                            <figcaption>
+                            <!-- <figcaption>
                                 <a href="#">View All Our Recent Work Here>></a>
-                            </figcaption>
+                            </figcaption> -->
                         </figure>
                     </article>
                 </section>
                 <section id="services" class="last clear">
-                    <article class="one_quarter">
-                        <figure>
+                    <article class="one_quarter two">
+                        <!-- <figure>
                             <img src="../Template/template_images/85/32x32.gif" alt="" width="32" height="32">
                         </figure>
                         <strong>Lorum ipsum dolor</strong>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla
+                            massa ut nisi ullamcorper.
                         </p>
                         <p class="more">
                             <a href="#">Read More>></a>
-                        </p>
+                        </p> -->
                     </article>
-                    <article class="one_quarter">
-                        <figure>
+                    <article class="one_quarter two">
+                        <!-- <figure>
                             <img src="../Template/template_images/85/32x32.gif" alt="" width="32" height="32">
                         </figure>
                         <strong>Lorum ipsum dolor</strong>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla
+                            massa ut nisi ullamcorper.
                         </p>
                         <p class="more">
                             <a href="#">Read More>></a>
-                        </p>
+                        </p> -->
                     </article>
-                    <article class="one_quarter">
-                        <figure>
+                    <article class="one_quarter two">
+                        <!-- <figure>
                             <img src="../Template/template_images/85/32x32.gif" alt="" width="32" height="32">
                         </figure>
                         <strong>Lorum ipsum dolor</strong>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla
+                            massa ut nisi ullamcorper.
                         </p>
                         <p class="more">
                             <a href="#">Read More>></a>
-                        </p>
+                        </p> -->
                     </article>
-                    <article class="one_quarter lastbox">
-                        <figure>
+                    <article class="one_quarter lastbox two">
+                        <!-- <figure>
                             <img src="../Template/template_images/85/32x32.gif" alt="" width="32" height="32">
                         </figure>
                         <strong>Lorum ipsum dolor</strong>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla
+                            massa ut nisi ullamcorper.
                         </p>
                         <p class="more">
                             <a href="#">Read More>></a>
-                        </p>
+                        </p> -->
                     </article>
                     <div class="spacer"></div>
-                    <article class="one_quarter">
-                        <figure>
+                    <article class="one_quarter two">
+                        <!-- <figure>
                             <img src="../Template/template_images/85/32x32.gif" alt="" width="32" height="32">
                         </figure>
                         <strong>Lorum ipsum dolor</strong>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla
+                            massa ut nisi ullamcorper.
                         </p>
                         <p class="more">
                             <a href="#">Read More>></a>
-                        </p>
+                        </p> -->
                     </article>
-                    <article class="one_quarter">
-                        <figure>
+                    <article class="one_quarter two">
+                        <!-- <figure>
                             <img src="../Template/template_images/85/32x32.gif" alt="" width="32" height="32">
                         </figure>
                         <strong>Lorum ipsum dolor</strong>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla
+                            massa ut nisi ullamcorper.
                         </p>
                         <p class="more">
                             <a href="#">Read More>></a>
-                        </p>
+                        </p> -->
                     </article>
-                    <article class="one_quarter">
-                        <figure>
+                    <article class="one_quarter two">
+                        <!-- <figure>
                             <img src="../Template/template_images/85/32x32.gif" alt="" width="32" height="32">
                         </figure>
                         <strong>Lorum ipsum dolor</strong>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla
+                            massa ut nisi ullamcorper.
                         </p>
                         <p class="more">
                             <a href="#">Read More>></a>
-                        </p>
+                        </p> -->
                     </article>
-                    <article class="one_quarter lastbox">
-                        <figure>
+                    <article class="one_quarter two lastbox">
+                        <!-- <figure>
                             <img src="../Template/template_images/85/32x32.gif" alt="" width="32" height="32">
                         </figure>
                         <strong>Lorum ipsum dolor</strong>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla
+                            massa ut nisi ullamcorper.
                         </p>
                         <p class="more">
                             <a href="#">Read More>></a>
-                        </p>
+                        </p> -->
                     </article>
                     <div class="spacer"></div>
                 </section>
@@ -181,16 +189,17 @@
     </div>
     <div class="wrapper row3">
         <footer id="footer" class="clear">
-            <p class="f1_left">
-                Copyright © 2018 - All Rights Reserved - 
+            <!-- <p class="f1_left">
+                Copyright © 2018 - All Rights Reserved -
                 <a href="#">Domain Name</a>
             </p>
             <p class="f1_right">
                 Template by
                 <a href="https://www.os-template.com/" title="Free Website Templates" target="_blank">OS Template</a>
-            </p>
+            </p> -->
         </footer>
     </div>
+    <script src="./Template5.js"></script>
 </body>
 
 </html>
