--- a/HTML/Templates/Basic84.html
+++ b/HTML/Templates/Basic84.html
@@ -10,11 +10,11 @@
 <div class="wrapper row1">
   <header id="header" class="clear">
     <div id="hgroup">
-      <h1><a href="#">Vaadgevi</a></h1>
+      <img src="https://images.indianexpress.com/2018/02/sonu-759.jpg" alt=""></a>
       <h2>Educational Institutions</h2>
     </div>
     <form action="#" method="post">
-      <fieldset>
+      <fieldset id="field">
         <legend>Search:</legend>
         <input type="text" value="Search Our Website&hellip;" onFocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;">
         <input type="submit" id="sf_submit" value="submit">
