--- a/HTML/Templates/Basic88.html
+++ b/HTML/Templates/Basic88.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Template1</title>
     <link rel="stylesheet" href="./Basic88.css" type="text/css">
+    <script src="basic88.js"></script>
+
 </head>
 
 <body>
