--- a/HTML/Templates/Basic83.html
+++ b/HTML/Templates/Basic83.html
@@ -1,5 +1,4 @@
-
-    <!DOCTYPE html>
+<!DOCTYPE html>
     <html lang="en" dir="ltr">
     <head>
     <title>Basic 83</title>
@@ -10,23 +9,23 @@
     <div class="wrapper row1">
       <header id="header" class="clear">
         <div id="hgroup">
-          <h1><a href="#">Bollywood</a></h1>
-          <h2>watch for Entertainment</h2>
+           <h1><a href="#">Bollywood</a></h1>
+          <h2>watch for Entertainment</h2> 
         </div>
         <form action="#" method="post">
-          <fieldset>
-            <legend>Search:</legend>
+          <fieldset id="field">
+             <legend>Search:</legend>
             <input type="text" value="Search Our Website&hellip;" onFocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;">
-            <input type="submit" id="sf_submit" value="submit">
+            <input type="submit" id="sf_submit" value="submit"> 
           </fieldset>
         </form>
         <nav>
-          <ul>
+          <ul id="ul_dom">
             <li><a href="#">Text Link</a></li>
             <li><a href="#">Text Link</a></li>
             <li><a href="#">Text Link</a></li>
             <li><a href="#">Text Link</a></li>
-            <li class="last"><a href="#">Text Link</a></li>
+            <li class="last"><a href="#">Text Link</a></li> 
           </ul>
         </nav>
       </header>
@@ -35,7 +34,9 @@
     <div class="wrapper row2">
       <div id="container" class="clear">
         <!-- content body -->
-        <section id="slider"><a href="#"><img src="https://images.indianexpress.com/2018/02/sonu-759.jpg" alt=""></a></section>
+         <section id="slider">
+            <a href="#"><img src="https://images.indianexpress.com/2018/02/sonu-759.jpg" alt=""></a> -->
+          </section> 
         <!-- main content -->
         <div id="homepage">
           <!-- services area -->
@@ -90,6 +91,7 @@
         <p class="fl_right">MOvie by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">Yash chopra</a></p>
       </footer>
     </div>
+    <script src="./Basic83.js"></script>
     </body>
     </html>
     
