--- a/templates/Template2.html
+++ b/templates/Template2.html
@@ -18,23 +18,9 @@
                 </h1>
                 <h2>Free HTML5 Website Template</h2>
             </div>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="#">Text Link</a>
-                    </li>
-                    <li>
-                        <a href="#">Text Link</a>
-                    </li>
-                    <li>
-                        <a href="#">Text Link</a>
-                    </li>
-                    <li>
-                        <a href="#">Text Link</a>
-                    </li>
-                    <li class="last">
-                        <a href="#">Text Link</a>
-                    </li>
+            <nav> 
+                <ul id="demo">
+                   
                 </ul>
             </nav>
         </header>
@@ -164,7 +150,8 @@
                 <a href="https://www.os-templates.com/" target="_blank" title="Free Website Templates"> Os Templates</a>
             </p>
         </footer>
-    </div> -->
+        <script src="template2.js"></script>
+    </div> 
 </body>
 
 </html>
