--- a/Assignments/Assignment Dynamic Templates/Dynamic Basic 83/styles.css
+++ b/Assignments/Assignment Dynamic Templates/Dynamic Basic 83/styles.css
@@ -17,12 +17,22 @@ body {
   font-size: 13px;
   color: #c0bab6;
 }
-
 a {
   text-decoration: none;
   color: #c0bab6;
 }
-
+.rows{
+  display:grid;
+  grid-template-rows: auto 1fr auto;
+  height:100vh;
+}
+.row2::-webkit-scrollbar { 
+        display: none;  /* Chrome Safari */
+}
+.row2{
+   scrollbar-width: none; /*Firefox */
+   -ms-overflow-style: none;  /*IE 10+ */
+}
 .row1 {
   background-color: #333333;
   display:grid;
@@ -349,5 +359,4 @@ footer p {
   footer {
     padding: 0 30px;
   }
-}
 }
