--- a/templates/Template2.html
+++ b/templates/Template2.html
@@ -31,7 +31,7 @@
                 <section id="latest" class="clear">
                     <article class="one_quarter">
                         <figure>
-                            <img src="../Template/template_images/215x315.gif" alt="" width="215" height="315">
+                            <img src="./images/215x315.gif" alt="" width="215" height="315">
                             <figcaption>Image Caption Here</figcaption>
                         </figure>
                     </article>
@@ -150,7 +150,7 @@
                 <a href="https://www.os-templates.com/" target="_blank" title="Free Website Templates"> Os Templates</a>
             </p>
         </footer>
-        <script src="template2.js"></script>
+        <script src="./template2.js"></script>
     </div> 
 </body>
 
