--- a/Assignments/Assignment Dynamic Templates/Dynamic Basic 88/styles.css
+++ b/Assignments/Assignment Dynamic Templates/Dynamic Basic 88/styles.css
@@ -86,6 +86,7 @@
     width:960px;
     margin:0 auto;
     padding:30px 0;
+    display:grid;
 }
 /* ============================ Section 1 ========================== */
 #section1{
