--- a/Assignments/Validation_Templates/T-83/spaceX_style.css
+++ b/Assignments/Validation_Templates/T-83/spaceX_style.css
@@ -115,6 +115,7 @@
         .row1 a {
             color: #C0BAB6;
             background-color: #333333;
+            text-decoration: none;
         }
 
         .row2 {
@@ -130,6 +131,7 @@
         .row3 a {
             color: #919191;
             background-color: #232323;
+            text-decoration: none;
         }
         #header,#container,#footer {
             display: block;
