--- a/Assignments/Validation_Templates/T-86/10000coders_style.css
+++ b/Assignments/Validation_Templates/T-86/10000coders_style.css
@@ -137,6 +137,7 @@
         .row1,.row1 a {
             color: #C0BAB6;
             background-color: #333333;
+            text-decoration: none;
         }
 
         .row2 {
@@ -152,6 +153,7 @@
         .row3,.row3 a {
             color: #919191;
             background-color: #232323;
+            text-decoration: none;
         }
         #container,#footer {
             display: block;
@@ -292,7 +294,7 @@
         #header nav ul{padding:0 20px;}
         #header nav li{display:inline; margin-right:25px; text-transform:uppercase;}
         #header nav li.last{margin-right:0;}
-        #header nav li a{color:#C0BAB6; background-color:#232323;}
+        #header nav li a{color:#C0BAB6; background-color:#232323;text-decoration: none;}
         #header nav li a:hover{color:#FF9900; background-color:#232323;}
 
         #container {
