--- a/templates/Template2.css
+++ b/templates/Template2.css
@@ -11,7 +11,7 @@
   margin: 10px 0 0 0;
   padding: 20px 0;
   color: #c0bab6;
-  background-color: #232323;
+  background-color: burlywood;
 }
 nav ul {
   margin: 0;
