--- a/templates/Template2.html
+++ b/templates/Template2.html
@@ -28,28 +28,28 @@
      <div class="wrapper row2">
         <div id="container" class="clear">
             <div id="homepage">
-                <section id="latest" class="clear">
+                <section id="latest" class= "clear">
                     <article class="one_quarter">
-                        <figure>
-                            <img src="./images/215x315.gif" alt="" width="215" height="315">
+                        <figure class="myImage">
+                            <img src="../antartica night image.jpg" alt="" width="215" height="315">
                             <figcaption>Image Caption Here</figcaption>
                         </figure>
                     </article>
                     <article class="one_quarter">
-                        <figure>
-                            <img src="../Template/template_images/215x315.gif" alt="" width="215" height="315">
+                        <figure class="myImage">
+                            <img src="../antartica night image.jpg" alt="" width="215" height="315">
                             <figcaption>Image Caption Here</figcaption>
                         </figure>
                     </article>
                     <article class="one_quarter">
-                        <figure>
-                            <img src="../Template/template_images/215x315.gif" alt="" width="215" height="315">
+                        <figure class="myImage">
+                            <img src="../antartica night image.jpg" alt="" width="215" height="315">
                             <figcaption>Image Caption Here</figcaption>
                         </figure>
                     </article>
                     <article class="one_quarter lastbox">
-                        <figure>
-                            <img src="../Template/template_images/215x315.gif" alt="" width="215" height="315">
+                        <figure class="myImage">
+                            <img src="../antartica night image.jpg" alt="" width="215" height="315">
                             <figcaption>Image Caption Here</figcaption>
                         </figure>
                     </article>
@@ -60,7 +60,7 @@
                     </p>
                 </section>
             </div>
-            <div id="content">
+           <!-- <div id="content">
                 <section id="services" class="last clear">
                     <ul>
                         <li>
@@ -149,9 +149,9 @@
                 Template by
                 <a href="https://www.os-templates.com/" target="_blank" title="Free Website Templates"> Os Templates</a>
             </p>
-        </footer>
-        <script src="./template2.js"></script>
+        </footer>-->
+        <script src="./template-nav2.js"></script>
+        <script src="templateimg2.js"></script>
     </div> 
 </body>
-
 </html>
