--- a/templates/template11.html
+++ b/templates/template11.html
@@ -19,22 +19,8 @@
                 <h2>Free HTML5 Website Template</h2>
             </div>
             <nav>
-                <ul>
-                    <li>
-                        <a href="#">Text Link</a>
-                    </li>
-                    <li>
-                        <a href="#">Text Link</a>
-                    </li>
-                    <li>
-                        <a href="#">Tex  Link</a>
-                    </li>
-                    <li>
-                        <a href="#">Text Link</a> 
-                    </li>
-                    <li class="last">
-                        <a href="#">Text Link</a>
-                    </li>
+                <ul id="demo">
+                   
                 </ul>
             </nav>
         </header>
@@ -43,14 +29,14 @@
         <div id="container" class="clear">
             <section id="slider">
                 <a href="#">
-                    <img src="../Template/template_images/960x360.gif" alt="">
+                    <img src="../img.jfif" alt="" width="960" height="300">
                 </a>
             </section>
             <div id="homepage">
                 <section id="services" class="clear">
                     <article class="one_third">
                         <figure>
-                            <img src="../Template/template_images/290x180.gif" alt="" width="290" height="180">
+                            <img src="../img.jfif" alt="" width="290" height="180">
                             <figcaption>
                                 <h2>Indonectetus facilis</h2>
                                 <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.</p>
@@ -62,7 +48,7 @@
                     </article>
                     <article class="one_third">
                         <figure>
-                            <img src="../Template/template_images/290x180.gif" alt="" width="290" height="180">
+                            <img src="../img.jfif" alt="" width="290" height="180">
                             <figcaption>
                                 <h2>Indonectetus facilis</h2>
                                 <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.</p>
@@ -74,7 +60,7 @@
                     </article>
                     <article class="one_third lastbox">
                         <figure>
-                            <img src="../Template/template_images/290x180.gif" alt="" width="290" height="180">
+                            <img src="../img.jfif" alt="" width="290" height="180">
                             <figcaption>
                                 <h2>Indonectetus facilis</h2>
                                 <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.</p>
@@ -206,6 +192,7 @@
                 <a href="https://www.os-templates.com/" target="_blank" title="Free Website Templates"> Os Templates</a>
             </p>
         </footer>
+        <script src="./temp11.js"></script>
     </div>
 </body>
 
