--- a/templates/Template2.html
+++ b/templates/Template2.html
@@ -18,49 +18,51 @@
                 </h1>
                 <h2>Free HTML5 Website Template</h2>
             </div>
-            <nav> 
+            <nav>
                 <ul id="demo">
-                   
+
                 </ul>
             </nav>
         </header>
     </div>
-     <div class="wrapper row2">
+    <div class="wrapper row2">
         <div id="container" class="clear">
             <div id="homepage">
-                <section id="latest" class= "clear">
+                <section id="latest" class="clear">
                     <article class="one_quarter">
                         <figure class="myImage">
-                            <img src="../antartica night image.jpg" alt="" width="215" height="315">
+                            <!-- <img src="../antartica night image.jpg" alt="" width="215" height="315"> -->
                             <figcaption>Image Caption Here</figcaption>
                         </figure>
                     </article>
                     <article class="one_quarter">
                         <figure class="myImage">
-                            <img src="../antartica night image.jpg" alt="" width="215" height="315">
+                            <!-- <img src="../antartica night image.jpg" alt="" width="215" height="315"> -->
                             <figcaption>Image Caption Here</figcaption>
                         </figure>
                     </article>
                     <article class="one_quarter">
                         <figure class="myImage">
-                            <img src="../antartica night image.jpg" alt="" width="215" height="315">
+                            <!-- <img src="../antartica night image.jpg" alt="" width="215" height="315"> -->
                             <figcaption>Image Caption Here</figcaption>
                         </figure>
                     </article>
                     <article class="one_quarter lastbox">
                         <figure class="myImage">
-                            <img src="../antartica night image.jpg" alt="" width="215" height="315">
+                            <!-- <img src="../antartica night image.jpg" alt="" width="215" height="315"> -->
                             <figcaption>Image Caption Here</figcaption>
                         </figure>
                     </article>
                 </section>
                 <section class="shout">
                     <p>
-                        Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed. Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras urna urnaretra lor urna neque sed quis orci nulla laoremut vitae doloreet condimentumst.
+                        Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed.
+                        Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras urna
+                        urnaretra lor urna neque sed quis orci nulla laoremut vitae doloreet condimentumst.
                     </p>
                 </section>
             </div>
-          <!--  <div id="content">
+            <!--  <div id="content">
                 <section id="services" class="last clear">
                     <ul>
                         <li>
@@ -150,8 +152,10 @@
                 <a href="https://www.os-templates.com/" target="_blank" title="Free Website Templates"> Os Templates</a>
             </p>
         </footer>-->
-        
-    </div> 
-    <script src="./template-nav2.js"></script>
+
+        </div>
+        <script src="./template-nav2.js"></script>
+
 </body>
+
 </html>
