--- a/Java Scritp/DOM/Template/Template2/Template2.html
+++ b/Java Scritp/DOM/Template/Template2/Template2.html
@@ -40,7 +40,7 @@
         </header>
     </div>
     <div class="wrapper row2">
-        <div id="container" class="clear">
+        <div id="containerr" class="clear">
             <div id="homepage">
                 <section id="latest" class="clear">
                     <article class="one_quarter">
