--- a/Java Scritp/DOM/Template/Template2/form1.html
+++ b/Java Scritp/DOM/Template/Template2/form1.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Templayte2_Basic87</title>
     <link rel="stylesheet" href="./Template2.css" type="text/css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 </head>
 
 <body>
@@ -39,24 +41,47 @@
             </nav>
         </header>
     </div>
-    <div class="wrapper row2">
-        <div id="container" class="clear" style="height: 500px;">
+    <div class="container">
+        <div class="row">
             <div class="col">
-                <form onsubmit="getUserData(event)">
+                <form>
                     <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">First Name</label>
+                        <input type="text" class="form-control" id="fname" onkeyup="validate()" />
+                    </div>
+                    <div class=" mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Last Name</label>
+                        <input type="text" class="form-control" id="lname" onkeyup="validate()" />
+                    </div>
+
+                    <div class=" mb-3">
                         <label for="exampleInputEmail1" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="email">
+                        <input type="email" class="form-control" id="email" onkeyup="validate()" />
                     </div>
-                    <div class="mb-3">
-                        <label for="fullName" class="form-label">Full Name</label>
-                        <input type="text" class="form-control" id="fullName">
-                    </div>
-                    <div class="mb-3">
-                        <label for="userName" class="form-label">User Name</label>
-                        <input type="text" class="form-control" id="userName">
-                    </div>
-                    <button class="btn btn-primary">Submit</button>
+
+                    <button type="button" class="btn btn-primary" onclick="createPerson()" id="submit" disabled="true">
+                        Submit
+                    </button>
+                    <button type="button" onclick="updatePerson()" class="btn btn-primary" style="display: none"
+                        id="update">
+                        Update
+                    </button>
                 </form>
+            </div>
+            <div class="col">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>First</th>
+                            <th>Last</th>
+                            <th>Email</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
@@ -72,21 +97,13 @@
             </p>
         </footer>
     </div>
-    <script>
-        function getUserData(event) {
-            event.preventDefault()
-            var person = {
-                email: "",
-                fullName: "",
-                userName: ""
-            }
-            for (a in person) {
-                person[a] = document.getElementById(a).value
-            }
-            console.log(person)
-        }
-        document.querySelector("button").onclick = getUserData
-    </script>
+    <script src="/Java Scritp/DOM/10k crud 2/clear2.js"></script>
+    <script src="/Java Scritp/DOM/10k crud 2/create2.js"></script>
+    <script src="/Java Scritp/DOM/10k crud 2/display2.js"></script>
+    <script src="/Java Scritp/DOM/10k crud 2/validate2.js"></script>
+    <script src="/Java Scritp/DOM/10k crud 2/editperson2.js"></script>
+    <script src="/Java Scritp/DOM/10k crud 2/deleteperson2.js"></script>
+    <script src="/Java Scritp/DOM/10k crud 2/udateperson2.js"></script>
 </body>
 
 </html>
