--- a/Java Scritp/DOM/Template/Template2/new.html
+++ b/Java Scritp/DOM/Template/Template2/new.html
@@ -44,13 +44,11 @@
             <table border="1" style="width: 100%">
                 <thead>
                     <tr>
+                        <th>#</th>
                         <th>First Name</th>
                         <th>Last Name</th>
-                        <th>Tel</th>
-                        <th>Address</th>
-                        <th>City Name</th>
-                        <th>sate</th>
-                        <th>Zip</th>
+                        <th>email</th>
+
                     </tr>
                 </thead>
                 <tbody>
